fix: style mt gap

--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -451,6 +451,8 @@ p.desc {
 	@media (max-width: 768px) {
 		position: relative;
 		padding-block: 10px;
+		margin-top: 0;
+		top: 0px;
 	}
 }
 
